# report-attivita-app

./: .codespellrc  .coverage  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGGIORNAMENTI_DA_DB.xlsx  ATTIVITA_PROGRAMMATE.xlsm  CHANGELOG.md  CLAUDE.md  Database_Report_Attivita.xlsm  Dockerfile  GEMINI.md  Gestionale_Tecnici.xlsx  README.md  add_admin.py  add_timestamp_to_attivita.py  add_timestamp_win32.py  aggiorna_knowledge_base_docs.py  aggiorna_risposte.py  analisi_storico.json  analizza_storico.py  app.py  avvio_completo.bat  bandit_report.json  bookings_test_output.txt  bookings_test_output_2.txt  config.py  crea_database.py  create_dummy_attivita.py  create_dummy_file.py  create_dummy_reports.py  credentials.json  debug_rotation.py  diagnose_oncall.py  docker-compose.yml  fix_tests_mock.py  genera_link.py  (+34 more)
.claude/: settings.local.json
.github/workflows/: quality_check.yml
.streamlit/: secrets.toml
components/: form_handlers.py  guida.py  menu.py  ui_components.py
data_sync/: ATTIVITA_PROGRAMMATE.xlsm  Database_Report_Attivita.xlsm
docs/prompts/: architecture_ai_blueprint.md
jules-scratch/: add_test_data.py
jules-scratch/verification/: verify_app_startup.py  verify_changes.py  verify_dashboard.py  verify_database_tab.py  verify_db_admin.py  verify_login_page.py  verify_oncall_calendar.py  verify_sidebar.py  verify_storico_page.py  verify_ui.py  verify_ui_changes.py
logs/: app.json
modules/: auth.py  data_manager.py  db_manager.py  email_sender.py  instrumentation_logic.py  license_manager.py  notifications.py  oncall_logic.py  pdf_utils.py  shift_generator.py  shift_management.py  utils.py
nginx/: manutenzione.html  nginx.conf
pages/: admin.py  database.py  gestione_dati.py  gestione_turni.py  guida.py  main_page.py  pianificazione_controllo.py  richieste.py  storico.py
relazioni_word/2020/: 01-Chiamata CTG in reperibilità del 01-02-2020.docx  01-Chiamata CTG in reperibilità del 02-05-2020.docx  01-Chiamata CTG in reperibilità del 02-07-2020.docx  01-Chiamata CTG in reperibilità del 04-06-2020.docx  02-Chiamata CTG in reperibilità del 02-02-2020.docx  02-Chiamata CTG in reperibilità del 02-09-2020.docx  02-Chiamata CTG in reperibilità del 10-06-2020 (1).docx  03-Chiamata CTG in reperibilità del 02-07-2020.docx  03-Chiamata CTG in reperibilità del 17-05-2020.docx  03-Chiamata CTG in reperibilità del 17-06-2020 (1).docx  04-Chiamata CTG in reperibilità del 22-06-2020.docx  04-Chiamata CTG in reperibilità del 31-05-2020.docx  05-Chiamata CTG in reperibilità del 16-02-2020.docx  06-Chiamata CTG in reperibilità del -15-03-2020.docx  06-Chiamata CTG in reperibilità del 19-01-2020.docx  08-Chiamata CTG in reperibilità del 31-01-2020.docx  Copy #1 of ~$-Chiamata CTG in reperibilità del 01-02-2020.docx  Copy #1 of ~$-Chiamata CTG in reperibilità del 01-03-2020.docx  Copy #1 of ~$-Chiamata CTG in reperibilità del 01-09-2020.docx  Copy #1 of ~$-Chiamata CTG in reperibilità del 05-02-2020.docx  Copy #1 of ~$-Chiamata CTG in reperibilità del 14-07-2020.docx  Copy #1 of ~$-Chiamata CTG in reperibilità del 17-05-2020.docx  Copy #1 of ~$-Chiamata CTG in reperibilità del 25-02-2020.docx  Copy #1 of ~$-Chiamata CTG in reperibilità del 26-02-2020.docx  Copy #2 of ~$-Chiamata CTG in reperibilità del 02-05-2020.docx  Copy #2 of ~$-Chiamata CTG in reperibilità del 26-02-2020.docx  Copy #4 of ~$-Chiamata CTG in reperibilità del 02-07-2020.docx  ~$-Chiamata CTG in reperibilità del 02-07-2020.docx  ~$-Chiamata CTG in reperibilità del 02-09-2020.docx  ~$-Chiamata CTG in reperibilità del 10-06-2020.docx
relazioni_word/2021/: 01-Chiamata CTG in reperibilità del 01-04-2021.docx  01-Chiamata CTG in reperibilità del 01-10-2021.docx  (+103 more)
scripts/: add_admin.py  aggiorna_knowledge_base_docs.py  analyze_excel_structure.py  audit_metrics.py  crea_database.py  dev_checks.bat  fix_db_team.py  fix_pdl_status.py  fix_refactor_db.py  generate_architecture.py  index_archive.py  rebuild_docker.bat  refactor_db_mocks.py  reset_admin.py  reset_admin_2fa.py  run_excel_macro.py  send_email_subprocess.py  setup_dev.bat  start_sync_service.bat  sync_data.py  test_name_matching.py
sessions/: session_02a1a7d7-9dad-4dc3-91ea-bded7cf3102c.json  session_091d88a3-7f5e-42a6-96f3-4004e40070c2.json  session_0a0625ce-7780-4a39-9267-d256de700996.json  session_0aa77472-bb32-4f61-b345-30fdf49c6411.json  session_0c62acd1-c460-4db6-a14b-92abea739ecc.json  session_15c4634f-6a42-41cc-8cb0-c7801afc3a8a.json  session_1b7046dd-3388-4f35-bc2e-43ff482b3f6c.json  session_1fabdae0-e23f-4421-9fd2-0e6241821810.json  session_27c2d011-e162-44e7-9427-ceffdb447a10.json  session_293ea10a-cbc3-4f7e-9061-5516798350cb.json  session_2f1a1989-3cb0-4d52-acc5-4f91c2bd4fdf.json  session_462e6c72-df2b-4715-90ff-f6d43e2ad3f6.json  session_4d1e723f-0a68-451f-8336-692b43b5bb1e.json  session_4d51e142-4b44-4ccf-b63b-35c2771a6452.json  session_54528832-ea63-4b24-8edb-34ae4918ae7c.json  session_649cc1f0-956d-4035-9ac7-94b77442deaa.json  session_7490b4bd-6d31-42fc-8536-6f7f2b34f964.json  session_74a18e83-3aea-412c-898d-2bf0da411836.json  session_76b5776c-b78f-4feb-8fe5-692777042785.json  session_8439d691-8c50-4bd4-90c1-f7d78c360ed5.json  session_905de9eb-0d7b-4d96-981b-13e62333382c.json  session_918c9c44-88e5-4a51-9c86-b8b3be127fd0.json  session_9b369095-ad8d-4d52-b955-d66c1b5bb9bb.json  session_a323393c-d638-4a26-b8b5-b1a40b5d7102.json  session_c4f810c2-6407-42b6-b109-0f323d163a0a.json  session_cc672b1f-4c96-41f2-85f9-cc2ae589c245.json  session_d0e65034-3a1b-4d52-a535-eddca50302d4.json  session_d21d684a-d1d8-43ee-9408-f42ec90227bb.json  session_d2faba77-940c-42b8-b522-69cf29cbb0d0.json  session_d6c3cc00-eea3-40dd-9ec1-07cc5443f0fc.json  session_dfe8239e-2049-4c9d-895f-d0e75067cd9c.json  session_e0fe055e-eb17-48df-b9d5-3d6f63028b72.json  session_f22925e9-4744-42f1-8df4-feb7a921fa45.json  session_fbc377ad-f241-470a-a5f5-877bbfb7f901.json
src/: app.py  config.py  constants.py  learning_module.py  login_handler.py
styles/: style.css
tests/: conftest.py  db_utils.py  run_robust_tests.py  test_report.md
(+750 files in other folders)
