[tool.poetry]
name = "report-attivita-app"
version = "3.1.0"
description = "Gestione operativa team tecnici con integrazione AI"
authors = ["Giancarlo Allegretti <gianky.allegretti@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.49.1"
gspread = "6.2.1"
oauth2client = "4.1.3"
pandas = "2.3.2"
requests = "2.32.5"
google-generativeai = "0.8.5"
pywin32 = { version = "311", markers = "sys_platform == 'win32'" }
matplotlib = "3.10.6"
openpyxl = "3.1.5"
passlib = "1.7.4"
bcrypt = "4.3.0"
pyotp = "2.9.0"
qrcode = "7.4.2"
pillow = "*"
python-docx = "1.1.2"
scikit-learn = "1.6.0"
nltk = "3.8.1"
fpdf2 = "*"
toml = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
types-openpyxl = "*"
types-requests = "*"
types-Pillow = "*"
bandit = "*"
deptry = "*"
codespell = "*"
refurb = "*"
vulture = "*"
xenon = "*"
interrogate = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pip-audit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
